# HW03_Robotic_Technology

src/robotic_course/robot_description/: CMakeLists.txt  package.xml
src/robotic_course/robot_description/config/: gz_bridge.yaml  params.yaml
src/robotic_course/robot_description/launch/: display.launch.py  gazebo.launch.py
src/robotic_course/robot_description/rviz/: config.rviz
src/robotic_course/robot_description/scripts/: motor_command.cpp
src/robotic_course/robot_description/src/description/: robot.urdf
src/robotic_course/robot_description/world/: depot.sdf
src/robotic_course/robot_localization/: package.xml  setup.py
src/robotic_course/robot_localization/config/: particle_filter_params.yaml
src/robotic_course/robot_localization/launch/: localization.launch.py
src/robotic_course/robot_localization/maps/: my_map.yaml
src/robotic_course/robot_localization/robot_localization/: astar_node.py  ekf_node.py  frame_id_converter.py  map_pub_node.py  motor_command.py  particlefilter_node.py
src/robotic_course/robot_slam/: CMakeLists.txt  package.xml
src/robotic_course/robot_slam/config/: slam_params.yaml
src/robotic_course/robot_slam/include/robot_slam/: motion_model.hpp  occupancy_grid_map.hpp  scan_matcher.hpp  slam_node.hpp
src/robotic_course/robot_slam/launch/: slam.launch.py
src/robotic_course/robot_slam/rviz/: slam.rviz
src/robotic_course/robot_slam/src/: map_saver_node.cpp  motion_model.cpp  occupancy_grid_map.cpp  scan_matcher.cpp  slam_node.cpp
